# secure-financial-pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: bronze_ingest.py  gold_aggregate.py  integrity_check.py  silver_clean.py
scripts/: benchmark.py  generate_synthetic_data.py  run_anomaly_demo.py  run_pipeline.py  simulate_tamper.py
src/: config.py
src/security/: audit.py
src/transformations/: anomaly.py  bronze.py  gold.py  silver.py
src/utils/: logging_config.py  slack_alerts.py  spark_session.py
tests/: test_anomaly.py  test_audit.py  test_bronze.py  test_dag_validation.py  test_gold.py  test_silver.py
